--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Dein Name</p>
+        <p>&copy; 2024 Sharon Mabel</p>
     </footer>
 
     <script src="script.js"></script>
